Details    : remove the ext3-san-jdike patches which are no longer useful.

Severity   : normal
Frequency  : rare
Bugzilla   : 11324
Description: LDISKFS-fs error (device sdc): ldiskfs_free_blocks
Details    : a disk corruption can cause the mballoc code to assert on a
	     double free or other extent corruptions. Handle these with
	     ext3_error() instead of assertions.

Severity   : major
Bugzilla   : 12861
Description: ldiskfs_ext_search_right: bad header in inode #3981353: unexpected
	     eh_depth
Details    : a wrong check of extent headers in ldiskfs_ext_search_right()
	     can cause the filesystem to be remounted read-only.

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with